Added to the front page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
+<link rel="stylesheet" href="styles.css">
 <title>Page Title</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1>
+    <p>Kyle Sikkema's Website</p>
+    <div class="clearfix">
+        <div class="nav">
+            <p>Home</p>
+        </div>
+        <div class="nav">
+            <p>About Me</p>
+        </div>
+        <div class="nav">
+            <p>Projects</p>
+        </div>
+        <div class="nav">
+            <p>Hobbies</p>
+        </div>
+      </div>
+</h1>
+<div class="section">
+    Welcome to my GitHub user webpage for projects and hobbies.
+</div>
+<a href="https://www.linkedin.com/in/kyle-sikkema-577599180/">Personal LinkedIn</a>
 </body>
 </html>
