--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../styles.css">
 <title>Page Title</title>
 </head>
 <body>
-
 <h1>
     <p>Kyle Sikkema's Website</p>
     <div class="clearfix">
         <div class="nav">
-            <p>Home</p>
+            <p><a href="homePage\index.html">Home</a></p>
         </div>
         <div class="nav">
-            <p>About Me</p>
+            <p><a href="aboutMe\aboutMe.html">About Me</a></p>
         </div>
         <div class="nav">
-            <p>Projects</p>
+            <p><a href="projects\projects.html">Projects</a></p>
         </div>
         <div class="nav">
-            <p>Hobbies</p>
+            <p><a href="hobbies\hobbies.html">Hobbies</a></p>
         </div>
-      </div>
+        </div>
 </h1>
 <div class="section">
-    Welcome to my GitHub user webpage for projects and hobbies.
+    Welcome to my hobbies page.
 </div>
 <a href="https://www.linkedin.com/in/kyle-sikkema-577599180/">Personal LinkedIn</a>
 </body>
