--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="styles.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
     <p>Kyle Sikkema's Website</p>
     <div class="clearfix">
         <div class="nav">
-            <p><a href="homePage\index.html">Home</a></p>
+            <p><a href="index.html">Home</a></p>
         </div>
         <div class="nav">
             <p><a href="aboutMe\aboutMe.html">About Me</a></p>
