--- a/projects/projects.html
+++ b/projects/projects.html
@@ -9,7 +9,7 @@
     <p>Kyle Sikkema's Website</p>
     <div class="clearfix">
         <div class="nav">
-            <p><a href="homePage\index.html">Home</a></p>
+            <p><a href="../index.html">Home</a></p>
         </div>
         <div class="nav">
             <p><a href="aboutMe\aboutMe.html">About Me</a></p>
