--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -12,13 +12,13 @@
             <p><a href="../index.html">Home</a></p>
         </div>
         <div class="nav">
-            <p><a href="aboutMe\aboutMe.html">About Me</a></p>
+            <p><a href="../aboutMe/aboutMe.html">About Me</a></p>
         </div>
         <div class="nav">
-            <p><a href="projects\projects.html">Projects</a></p>
+            <p><a href="../projects/projects.html">Projects</a></p>
         </div>
         <div class="nav">
-            <p><a href="hobbies\hobbies.html">Hobbies</a></p>
+            <p><a href="../hobbies/hobbies.html">Hobbies</a></p>
         </div>
         </div>
 </h1>
