--- a/projects/projects.html
+++ b/projects/projects.html
@@ -15,7 +15,7 @@
             <p><a href="../aboutMe/aboutMe.html">About Me</a></p>
         </div>
         <div class="nav">
-            <p><a href="../projects/projects.html">Projects</a></p>
+            <p><a href="projects.html">Projects</a></p>
         </div>
         <div class="nav">
             <p><a href="../hobbies/hobbies.html">Hobbies</a></p>
