--- a/aboutMe/aboutMe.html
+++ b/aboutMe/aboutMe.html
@@ -12,7 +12,7 @@
             <p><a href="../index.html">Home</a></p>
         </div>
         <div class="nav">
-            <p><a href="../aboutMe/aboutMe.html">About Me</a></p>
+            <p><a href="aboutMe.html">About Me</a></p>
         </div>
         <div class="nav">
             <p><a href="../projects/projects.html">Projects</a></p>
