--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -18,7 +18,7 @@
             <p><a href="../projects/projects.html">Projects</a></p>
         </div>
         <div class="nav">
-            <p><a href="../hobbies/hobbies.html">Hobbies</a></p>
+            <p><a href="hobbies.html">Hobbies</a></p>
         </div>
         </div>
 </h1>
