--- a/aboutMe/aboutMe.html
+++ b/aboutMe/aboutMe.html
@@ -60,14 +60,14 @@
   <!-- Overlay effect when opening sidebar on small screens -->
   <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
   
-  <div class="w3-main" style="margin-left:300px; overflow-y:scroll; min-height: 100%; margin-bottom: 100px;">
+  <div class="w3-main" style="margin-left:300px; overflow-y:scroll; margin-bottom: 100px;">
   
-    <div class="w3-row w3-padding-128">
-        <div class="w3-twothird w3-container">
-          <h1 class="w3-text-teal">About Me</h1>
-          <p>Please wait for updates to the site</p>
+    <header id="portfolio">
+        <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+        <div class="w3-container">
+        <h1><b>About Me</b></h1>
         </div>
-      </div>
+      </header>
     
   
     <!-- Footer -->
