--- a/hobbies/drawing.html
+++ b/hobbies/drawing.html
@@ -60,11 +60,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div class="w3-main" style="margin-left:300px; overflow-y:scroll; min-height: 100%; margin-bottom: 100px;">
+<div class="w3-main" style="margin-left:300px; overflow-y:scroll; margin-bottom: 100px;">
 
     <!-- Header -->
     <header id="portfolio">
-      <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
       <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
       <div class="w3-container">
       <h1><b>Drawings to be added</b></h1>
