--- a/projects/update0.html
+++ b/projects/update0.html
@@ -60,14 +60,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div class="w3-main" style="margin-left:300px; overflow-y:scroll; min-height: 100%; margin-bottom: 100px;">
+<div class="w3-main" style="margin-left:300px; overflow-y:scroll; margin-bottom: 100px;">
 
-  <div class="w3-row w3-padding-128">
-      <div class="w3-twothird w3-container">
-        <h1 class="w3-text-teal">Fractured Knight Update 0</h1>
-        <p>Please wait for updates to the site</p>
+    <!-- Header -->
+    <header id="portfolio">
+      <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+      <div class="w3-container">
+      <h1><b>Update 0</b></h1>
       </div>
-    </div>
+    </header>
   
 
   <!-- Footer -->
