Fixed footer, added aboutMe and picture

--- a/aboutMe/aboutMe.html
+++ b/aboutMe/aboutMe.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-  html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
+  html,body,h1,h2,h3,h4,h5,h6,p {font-family: "Roboto", sans-serif;}
   .w3-sidebar {
     z-index: 3;
     width: 250px;
@@ -66,12 +66,20 @@
         <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
         <div class="w3-container">
         <h1><b>About Me</b></h1>
+        <p>I'm a recent graduate of the University of North Texas in Denton and have a Bachelor of Science
+          Degree in Computer Science. My whole life, I've enjoyed a mix between tech and literature and indulging 
+          in both creation and use in both fields. Throughout my time at university I have acquired skills with Python, 
+          Java, C/C++, SQL, and HTML. Within this I plan on showcasing both my hobbies so you can get to know me more personally
+          and my projects so you can get to know me more professionally. Also in the footer down below are links to both my LinkedIn
+          profile page and my GitHub profile. If you have any suggestions on the website or wish to contact me at anytime, please email
+          me at kylemsikkema@gmail.com  
+        </p>
         </div>
       </header>
     
   
     <!-- Footer -->
-    <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer" style="position: fixed; width:100%; bottom: 0;">
+    <footer class="w3-padding-64 w3-light-grey w3-small w3-left-align" id="footer" style="position: fixed; width:100%; bottom: 0;">
       <div class="w3-row-padding">
         <div class="w3-col">
           <h4>Important Links</h4>
