--- a/hobbies/drawing.html
+++ b/hobbies/drawing.html
@@ -66,12 +66,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <header id="portfolio">
       <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
       <div class="w3-container">
-      <h1><b>Drawings to be added</b></h1>
+      <h1><b>Drawings</b></h1>
       </div>
     </header>
     
     <div class="picture conatiner" style="margin-bottom: 150px; min-height: 100%;">
-
+      <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img src="../images/joyboy.png" alt="Luffy Gear 5" style="width:100%" class="w3-hover-opacity" onclick="onClick(this)">
+          <div class="w3-container w3-white">
+            <p><b>Luffy Gear 5</b></p>
+          </div>
+        </div>
       <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
         <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
         <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
@@ -83,7 +89,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   
 
   <!-- Footer -->
-  <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer" style="position: fixed; width:100%; bottom: 0;">
+  <footer class="w3-padding-64 w3-light-grey w3-small w3-left-align" id="footer" style="position: fixed; width:100%; bottom: 0;">
     <div class="w3-row-padding">
       <div class="w3-col">
         <h4>Important Links</h4>
