--- a/hobbies/writing.html
+++ b/hobbies/writing.html
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   
 
   <!-- Footer -->
-  <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer" style="position: fixed; width:100%; bottom: 0;">
+  <footer class="w3-padding-64 w3-light-grey w3-small w3-left-align" id="footer" style="position: fixed; width:100%; bottom: 0;">
     <div class="w3-row-padding">
       <div class="w3-col">
         <h4>Important Links</h4>
